import com.vanniktech.maven.publish.*

/**
 * In addition to releasing the library on Maven Central, we also release a SAS library along with some macros.
 * Since the release is triggered on GitHub via the creation of a release, the SAS zip distribution has to be 
 * manually created before and added to the release:
 * 
 *     gradlew clean createDistribution
 * 
 * Note that creating a release doesn't seem to trigger the publish job, I am not sure why. I have been doing it manually so far...
 */

plugins {
    id 'java-library'
    id 'jacoco'
    id 'com.vanniktech.maven.publish' version '0.36.0' // publish to Maven Central
    id 'com.github.ben-manes.versions' version '0.53.0' // check for out-of-date dependencies (run 'dependencyUpdates' manually)
    id 'com.github.spotbugs' version '6.4.8' // spotbugs code analysis
    id 'org.sonarqube' version '7.2.2.6593' // sonarQube analysis
}

group = 'com.imsweb'
version = file('VERSION').text
description = 'This library provides support for the NAACCR XML format.'

println "Starting build using JDK ${Runtime.version().feature()}"

repositories {
    mavenCentral()
}

dependencies {
    api 'com.thoughtworks.xstream:xstream:1.4.21'

    implementation 'commons-io:commons-io:2.21.0'
    implementation 'org.apache.commons:commons-lang3:3.20.0'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'com.imsweb:data-generator:2.3'
    testImplementation 'com.imsweb:layout:7.0'
    testImplementation 'com.imsweb:naaccr-api-client:1.3'
    testImplementation 'de.siegmar:fastcsv:4.1.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:unchecked' << '-Xlint:deprecation'
}

tasks.withType(Javadoc).configureEach {
    options.addStringOption('Xdoclint:none', '-quiet')
    options.addStringOption('encoding', 'UTF-8')
    options.addStringOption('charSet', 'UTF-8')
    options.addBooleanOption('html5', true)
}

// I have absolutely no idea why I need to do this; it appears the test task depends on the created JAR file; I know it depends 
// on the source code, but I can't figure out why it depends on the created archive itself. I found this workaround online...
tasks.named("test") {
    dependsOn(tasks.named("jar"))
}

// customize the manifest
jar {
    manifest {
        attributes('Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Implementation-Vendor': 'Information Management Services Inc.',
                'Created-By': System.properties['java.vm.version'] + ' (' + System.properties['java.vm.vendor'] + ')',
                'Built-By': System.getProperty('user.name'),
                'Built-Date': new Date(),
                'Built-JDK': System.getProperty('java.version'),
                'Automatic-Module-Name': 'com.imsweb.naaccrxml')
    }
    from('VERSION') {
        rename 'VERSION', 'NAACCR-XML-VERSION'
    }
    from('LICENSE') {
        rename 'LICENSE', 'NAACCR-XML-LICENSE'
    }
}

sonarqube {
    properties {
        property "sonar.projectKey", "imsweb_naaccr-xml"
        property "sonar.organization", "imsweb"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.exclusions", "**/lab/**,**/sas/**"
        property "sonar.coverage.exclusions", "**/lab/**,**/sas/**"
    }
}

// spotbugs plugin settings
spotbugs {
    ignoreFailures = false
    excludeFilter.set(project(':').file("config/spotbugs/spotbugs-exclude.xml"))
}

jacocoTestReport {
    reports {
        xml.required = true
    }
}
test.finalizedBy jacocoTestReport

def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { it -> version.toUpperCase().contains(it) }
    def regex = /^[0-9,.v-]+(-r)?$/
    return !stableKeyword && !(version ==~ regex)
}

// https://github.com/ben-manes/gradle-versions-plugin
tasks.named("dependencyUpdates").configure {
    rejectVersionIf {
        isNonStable(it.candidate.version)
    }
}

// needed to deploy to Maven Central Portal
mavenPublishing {
    configure(new JavaLibrary(new JavadocJar.Javadoc(), new SourcesJar.Sources()))

    publishToMavenCentral(true)
    signAllPublications()

    pom {
        name = 'NAACCR XML'
        description = 'This library provides support for the NAACCR XML format.'
        url = 'https://github.com/imsweb/naaccr-xml'
        inceptionYear = '2015'

        licenses {
            license {
                name = 'A modified BSD License (BSD)'
                url = 'https://github.com/imsweb/naaccr-xml/blob/master/LICENSE'
                distribution = 'repo'
            }
        }

        developers {
            developer {
                id = 'depryf'
                name = 'Fabian Depry'
                email = 'depryf@imsweb.com'
            }
        }

        scm {
            url = 'https://github.com/imsweb/naaccr-xml'
            connection = 'scm:https://github.com/imsweb/naaccr-xml.git'
            developerConnection = 'scm:git@github.com:imsweb/naaccr-xml.git'
        }
    }
}

// Gradle wrapper, this allows to build the project without having to install Gradle...
wrapper {
    gradleVersion = '9.2.1'
    distributionType = Wrapper.DistributionType.ALL
}

// the SAS library is compiled under Java 8 code-compatibility; Intellij can't handle that (only because I didn't properly set it up as a module)
if (System.getProperty("idea.active") != 'true')
    apply from: 'gradle/sas.gradle'
